--- a/index.Rmd
+++ b/index.Rmd
@@ -23,296 +23,10 @@ editor_options:
 # https://statnmap.com/2017-11-13-enable-code-folding-in-bookdown-and-blogdown/ for code folding script    
 ---
 
-title: "A Minimal Book Example"
-author: "John Doe"
-date: "`r Sys.Date()`"
-site: bookdown::bookdown_site
-documentclass: book
-bibliography: [book.bib, packages.bib]
-# url: your book url like https://bookdown.org/yihui/bookdown
-# cover-image: path to the social sharing image like images/cover.jpg
-description: |
-  This is a minimal example of using the bookdown package to write a book.
-  The HTML output format for this example is bookdown::gitbook,
-  set in the _output.yml file.
-link-citations: yes
-github-repo: rstudio/bookdown-demo
+# Dinámica Poblacional
 
-# VII Andean Orchid Conference, Cusco, Perú, 24-26 Noviembre 2023 {#sec-vii-andean-orchid-conference-cusco-perú-24-26-noviembre-2023}
+El estudio de la Dinámica Poblacional tiene como objetivo desarrollar conocimiento los patrones y processos intra-especifica y entre-especies.  Tradicionalmente muchos de los trabajos de dinamica poblacional se enfocarón en los estudios intra-especifica, fomentando una perpestiva que las especies no enteractuan con su ambiente biotico.     
 
-Lugar: Universidad Nacional de San Antonio Abad del Cusco, Perú Fecha
-del taller: 24-26 Noviembre 2023
+## Objetivo del libro: 
 
-## *Impartido por*:
-
-*Dr. Raymond L. Tremblay:*
-
-Universidad de Puerto Rico Presidente de Analítica Fundación, Inc
-
-e-mail:
-
--   [raymond.tremblay\@upr.edu](mailto:raymond.tremblay@upr.edu){.email}
-
--   [tremblayanaliticafun\@gmail.com](mailto:tremblayanaliticafun@gmail.com){.email}
-
-*Dra. Nhora Helena Ospina-Calderón*:
-
-Pontificia Universidad Javeriana Seccional Cali Profesora-investigadora
-
-e-mail:
-
--   [nhospina\@javerianacali.edu.co](mailto:nhospina@javerianacali.edu.co){.email}
-
-## Duración del taller:
-
-Tres días con 26 horas totales de Taller-teórico practico con una
-experiencia de recolección de datos en el campo (8 horas) y dos días de
-taller--teórico practico y análisis datos (14 horas). Instrucción en
-español.
-
-## Certificación A nombre de la
-
--   Universidad Nacional San Antonio Abad del Cusco (UNSAAC)
-
--   ANALITICA Fundación Inc. (Puerto Rico)
-
-## Costo del taller Estudiantes:
-
-S/. xxx.00 nuevos soles (\$ 100.00 dol.) locales.
-
-Profesionales: S/. xxx.00 nuevos soles (\$200.00 dol.) Estudiantes
-internacional y profesionales
-
-## Cupo: 25 personas
-
-## Introducción
-
-Este taller teórico-práctico se ofrece a los estudiantes interesados en
-orquídeas y a las personas interesadas en la conservación de plantas.
-Los métodos se enfocarán en el uso de las matrices de Lefkovitch para
-construir modelos de historia de vida que sirven a su vez para evaluar
-si una población de una especie es estable, está creciendo o se está
-reduciendo. Para evaluar el crecimiento de las poblaciones se utiliza el
-método de marcar y recapturar (monitorear) individuos en el campo, dicho
-método se aplicará para hacer Matrices de Proyección de Poblaciones
-(MPP). Se dará énfasis en el manejo para el almacenamiento y
-sistematización de datos. Los datos recolectados en el campo serán
-utilizados para construir una base de datos que almacene las evidencias
-recogidas en el campo y funcione como insumo para calcular las matrices
-de transiciones. Posterior a la construcción de matrices de transición
-se analizará las tasas de crecimiento (crecimiento poblacional
-intrínseco), estimando los errores y los intervalos de confianza con
-distribución beta para cada una de las transiciones. También se llevará
-a cabo análisis de elasticidad y la proyección del tamaño de la
-población. Todos los análisis serán preparados y llevados a cabo en R,
-Rstudio y RMarkdown (todos programas de distribución libre).
-
-## Objetivo general:
-
-Introducir las bases teóricas y prácticas para la recolección de datos
-de campo que permiten determinar la probabilidad de extinción de una
-población.
-
-## Objetivos específicos:
-
-• Conocer las bases teóricas y los métodos modernos de recolección de
-datos en el campo para determinar la probabilidad de extinción de una
-población.
-
-\
-• Conocer los datos básicos y su correcta manipulación para determinar
-la viabilidad de una población.
-
-• Manipular correctamente los archivos electrónicos de datos de campo
-para proponer la estructura de la población y su posterior depuración
-para análisis sobre diferentes formatos.
-
-• Aprender nociones básicas de Excel, R y RStudio para editar y analizar
-conjuntos de datos para el uso con análisis de MPP.
-
-• Construir un gráfico de ciclo de vida para la especie estudiada.
-
-• Construir modelos demográficos que permitan predecir la dinámica
-poblacional en el tiempo y generar insumos importantes para el manejo y
-la conservación
-
-• Estimar los intervalos de confianza de los parámetros del ciclo de
-vida de la población.
-
-• Utilizar la información y análisis demográfico para el diagnóstico y
-predicciones de la viabilidad de las poblaciones.
-
-• Modelar el tamaño poblacional de la población de estudio para
-determinar su posible riesgo de extinción
-
-```         
-```
-
-## Introducción
-
-**23 noviembre- Llegada a Cusco**
-
--   8:00 pm- 9:15pm
-
-    -   Introducción al taller y Presentación de conceptos básicos
-        (Capítulo 2; Tremblay)
-    -   Diagrama del ciclo de vida (Capítulo 3; Ospina)
-
-**24 noviembre: Viaje de campo**
-
--   Salida 6:00 am - Llegada 8:15 am.
-
-    -   Llegada al sitio de muestreo campo
-
--   8:30am- 5:00pm.
-
-    -   \- Determinación de la especie a estudiar (Ospina y Tremblay)
-
-    -   \- Métodos de recolección de datos - Recolección de datos
-        (Capítulo 4 y 22; Ospina y Tremblay)
-
-**25 noviembre:**
-
-8:30 pm-10:30 pm
-
--   \- Teoria:
-    -   Proponer un ciclo de vida (Capítulo 3)
-    -   Quien se reproduce y como calcular la fecundidad (Capitulo 6)
-    -   Como se ama la matriz (3 x 3) y ejercicio (Capítulo 5)
-        -   Subir la matriz a mano
-            -   Multiplicación del vector (N en el tiempo t) con la
-                matriz = Nt+1
-
-10:30am -- 12:00pm
-
--   \- Introducción a la teoria de MPP
-    -   crecimiento asimtotico (Capítulo 9)
-    -   elasticidad (Capitulo 10)
-    -   estructura estable (Capitulo Nuevo)
-    -   valor reproductivo (Capitulo Nuevo)
-
-Almuerzo 12:00- 1:00pm
-
-1:00pm - 2:30 pm
-
--   \- Organización de los datos en Excel/Numbers/Sheet, estructura de
-    la población (Capítulo 4 y 22; Ospina y Tremblay)
-
-2:30pm -- 5:30pm
-
--   Introducción a R, RStudio y RMarkdown y paquetes de análisis.
-    (Tremblay)
-
--   Subir los datos a RStudio, análisis preliminar de los datos usando
-    **popdemo** y **raretrans** (Ospina y Tremblay)
-
-    -   Métodos para calcular contruir la matriz (Capítulo 8, Tremblay)
-    -   Incluir la fecundidad (Capítulo 6)
-    -   Matriz bayesiana a priori (Capítulo 8, Tremblay)
-    -   Calcular los indices de **Oquidea cuscanensis**
-        -   crecimiento asintótico (Capítulo 9)
-        -   elasticidad (Capítulo 10)
-        -   estructura estable (Capítulo Nuevo)
-        -   valor reproductivo (Capítulo Nuevo)
-
-**26 noviembre:**
-
-8:30 pm-10:30 pm
-
--   \- Descripción histórica del uso y aplicaciones de MPP (Capítulo 2,
-    16: Tremblay)
-
-10:30am -- 12:00pm
-
--   Dinamica transitoria/ \*transfer function\* (Capítulo 12; Ospina)
-
--   Dinámica, análisis de viabilidad poblacional: el futuro de la
-    especie (Capítulo 9: Tremblay)
-
-Almuerzo 12:00- 1:00pm
-
-1:00pm -- 4:30pm
-
--   Estudio de casos
-    -   *Caladenia xxx. Terrestre con latencia*
-    -   *Dracula chimaera*. Epífita y Terrestre
-    -   *Dendrophylax lindenii*. Epífita áfila
-    -   
-
-4:30pm -- 5:30pm
-
--   Presentaciones de trabajo
-
-## Materiales necesarios:
-
-1.  Computadora portátil (Mac o PC) con Excel, R y Rstudio
-
--   Los participantes pueden trabajar en parejas en caso de que sea
-    difícil conseguir una computadora portatil.\
--   Es necesario acudir a las sesiones teóricas con los programas y
-    paquetes previamente instalados, se enviará instrucciones y brindará
-    oportuna asesoría.
-
-## Bibliografía
-
-Gascoigne Samuel J. L., Simon Rolph, Daisy Sankey, Nagalakshmi
-Nidadavolu, Adrian S. Stell Pičman, Christina M. Hernández, Matthew
-Philpott, Aiyla Salam, Connor Bernard, Erola Fenollosa, Jessie McLean,
-Shathuki Hetti Achchige Perera, Oliver G. Spacey, Maja Kajin, Anna C.
-Vinton, C. Ruth Archer, Jean H. Burns, Danielle L. Buss, Hal Caswell,
-Judy P. Che-Castaldo, Dylan Z. Childs, Pol Capdevila, Aldo Compagnoni,
-Elizabeth Crone, Thomas H. G. Ezard, Dave Hodgson, Owen Jones, Eelke
-Jongejans Jenni McDonald, Brigitte Tenhumberg, Chelsea C. Thomas, Andrew
-J. Tyre, Satu Ramula, Iain Stott, Raymond L. Tremblay, Phil Wilson,
-James W. Vaupel, and Roberto Salguero-Gómez.. 2023. **A standard
-protocol to report discrete stage-structured demographic information.**
-Submitted to Methods in Ecology and Evolution. In press.
-
-Stott, I., Hodgson, D. J., & Townley, S. (2012). **Beyond sensitivity:
-nonlinear perturbation analysis of transient dynamics. Methods in
-Ecology and Evolution**. 3(4), 673-684. doi:
-10.1111/j.2041-210X.2012.00199.x
-
-Stott, I., Hodgson, D. J., & Townley, S. (2012b). **Popdemo: An R
-package for population demography using projection matrix analysis.
-Methods in Ecology and Evolution**, 3(5), 797-802.
-<https://doi.org/10.1111/j.2041-210X.2012.00222.x>
-
-Stott, I., Townley, S., & Hodgson, D. J. (2011). **A framework for
-studying transient dynamics of population projection matrix models**.
-Ecology Letters, 14(9), 959-970. doi: 10.1111/j.1461-0248.2011.01659.x
-
-Tremblay, R. L., & Hutchings, M. J. (2002). **Population dynamics in
-orchid conservation: a review of analytical methods based on the rare
-species Lepanthes eltoroensis**. Orchid conservation. Kota Kinabalu:
-Natural History Publications (Borneo), 183-204.
-
-Tremblay, R. L., Raventos, J., & Ackerman, J. D. (2015). **When
-stable-stage equilibrium is unlikely: integrating transient population
-dynamics improves asymptotic methods**. Annals of Botany, 116(3),
-381-390. <doi:10.1093/aob/mcv031>
-
-Tremblay, R. L., Tyre, A. J., Pérez, M. E., & Ackerman, J. D. (2021).
-**Population projections from holey matrices: Using prior information to
-estimate rare transition events**. Ecological Modelling, 447, 109526.
-<https://doi.org/10.1016/j.ecolmodel.2021.109526>.
-
-**Que conocemos de estas especies?**
-
-Especies reportadas de trabajo
-
--   Cyrtochilum cimiciferum (Rchb.f.) Dalström (Tiene una gran poblacion
-    )
-
--   Cyrtochilum myanthum (Lindl.) Kraenzl.1917
-
--   *Epidendrum chalmersii* Hágsater & Ric. Fernández 2013 (endémico de
-    la región Cusco)
-
--   *Epidendrum syringothyrsus* Rchb.f. ex Hook.f. 1875
-
--   *Pleurothallis casapensis* Lindl. 1842
-
--   *Habenaria* sp.
-
--   *Cyclopogon* sp.
+Este libro digital 
